--- a/carte.html
+++ b/carte.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html lang="fr">
+<html ang="fr">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1">
@@ -41,151 +41,162 @@
       
       <!-- Breakfast -->
       <div id="breakfast" class="tabcontent">
-        <h1>PETIT DEJEUNER</h1>
         <!-- Classic -->
-        <h2>Le classique 20€</h2>
-        <h3>Double expresso</h3>
-        <h3>ou Chocolat chaud maison</h3>
-        <h3>ou Thé "MARIAGE FRERES"</h3>
+        <button class="accordion">Le classique 20€</button>
+        <div class="panel">
+        <h2>Double expresso</h2>
+        <h2>ou Chocolat chaud maison</h2>
+        <h2>ou Thé "MARIAGE FRERES"</h2>
         <br><br>
-        <h3>Jus d'orange</h3>
-        <h3>ou Jus de pamplemousse frais</h3>
+        <h2>Jus d'orange</h2>
+        <h2>ou Jus de pamplemousse frais</h2>
         <br><br>
-        <h3>Salade de fruits frais</h3>
+        <h2>Salade de fruits frais</h2>
         <br><br>
-        <h3>Panier de mini viennoiseries</h3>
-        <h3>ou Ficelle grilée</h3>
+        <h2>Panier de mini viennoiseries</h2>
+        <h2>ou Ficelle grilée</h2>
         <br><br>
         <p>Beurre et confiture</p>
+        </div>
 
         <!-- Fruits and dairy -->
-        <h2>Fruits et laitages</h2>
+        <button class="accordion">Fruits et laitages</button>
+        <div class="panel">
         <!-- Granola -->
-        <h3>Granolas bios</h3>
+        <h2>Granolas bios</h2>
         <p>Yaourt à la grecque et miel 10€</p>
         <p>Yaourt à la grecque et fruits frais 15€</p>
         <!-- Cottage cheese -->
-        <h3>Fromage blanc 0% 8€</h3>
+        <h2>Fromage blanc 0% 8€</h2>
         <p>Nature</p>
         <p>Miel</p>
         <!-- Goat cheese -->
-        <h3>Chèvre frais 14€</h3>
+        <h2>Chèvre frais 14€</h2>
         <p>"Dominique Fabre"</p>
         <!-- fruits salad -->
-        <h3>Salade de fruits frais 15€</h3>
+        <h2>Salade de fruits frais 15€</h2>
+        </div>
 
         <!-- Eggs -->
-        <h2>Oeufs</h2>
+        <button class="accordion">Oeufs</button>
+        <div class="panel">
         <!-- Omelet -->
-        <h3>Omelette blanche bio 15€</h3>
+        <h2>Omelette blanche bio 15€</h2>
         <br><br>
         <!-- Fried egg -->
-        <h3>Oeufs bio plat nature 9€</h3>
-        <h3>Oeufs bio plat bacon 12€</h3>
-        <h3>Oeufs bio plat saumon fumé 15€</h3>
+        <h2>Oeufs bio plat nature 9€</h2>
+        <h2>Oeufs bio plat bacon 12€</h2>
+        <h2>Oeufs bio plat saumon fumé 15€</h2>
         <br><br>
         <!-- Scrambled egg -->
-        <h3>Oeufs bio brouilés nature 12€</h3>
-        <h3>Oeufs bio brouilés bacon 14€</h3>
-        <h3>Oeufs bio brouilés saumon fumé 15€</h3>
+        <h2>Oeufs bio brouilés nature 12€</h2>
+        <h2>Oeufs bio brouilés bacon 14€</h2>
+        <h2>Oeufs bio brouilés saumon fumé 15€</h2>
         <br><br>
         <!-- Boiled egg -->
-        <h3>Oeufs bio coque 4€</h3>
+        <h2>Oeufs bio coque 4€</h2>
+        </div>
 
         <!-- Hot drinks -->
-        <h2>Boissons chaudes</h2>
+        <button class="accordion">Boissons chaudes</button>
+        <div class="panel">
         <!-- Coffee -->
-        <h3>Café expresso 3.9€</h3>
-        <h3>Double expresso 7.5€</h3>
+        <h2>Café expresso 3.9€</h2>
+        <h2>Double expresso 7.5€</h2>
         <p>Café crème</p>
         <p>Cappuccino</p>
         <br><br>
         <!-- Tea -->
-        <h3>Thés "MARIAGE FRERES" 8€</h3>
+        <h2>Thés "MARIAGE FRERES" 8€</h2>
         <p>Earl grey</p>
         <p>Ceylan</p>
         <p>Darjeeling</p>
         <p>Marco polo</p>
-        <p>Thé vert Fuji Yama</h3>
-        <p>Thé vert jasmin</h3>
+        <p>Thé vert Fuji Yama</h2>
+        <p>Thé vert jasmin</h2>
           <br><br>
         <!-- French tea -->
-        <h3>French breakfast tea 8€</h3>
+        <h2>French breakfast tea 8€</h2>
         <!-- Infusion -->
-        <h3>Infusions 6€</h3>
+        <h2>Infusions 6€</h2>
         <!-- Homemade hot chocolate -->
-        <h3>Chocolat chaud maison 8€</h3>
+        <h2>Chocolat chaud maison 8€</h2>
         <!-- Milk -->
-        <h3>Lait chaud</h3>
+        <h2>Lait chaud</h2>
         <p>Nature 5€</p>
         <p>Vanille 6.5€</p>
+        </div>
 
         <!-- Juice and water -->
-        <h2>Les jus et eaux</h2>
+        <button class="accordion">Les jus et eaux</button>
+        <div class="panel">
         <!-- Juice -->
-        <h3>Jus 7€</h3>
+        <h2>Jus 7€</h2>
         <p>Oranges fraiches</p>
         <p>Pamplemousses frais</p>
         <p>Citrons frais</p>
         <br><br>
         <!-- Minute juice -->
-        <h3>Jus minutes 9€</h3>
+        <h2>Jus minutes 9€</h2>
         <p>Carottes bios</p>
         <p>Green detox</p>
         <br><br>
         <!-- Water -->
-        <h3>Vittel, San Pellegrino, Perrier</h3>
+        <h2>Vittel, San Pellegrino, Perrier</h2>
         <p>50 cL 6€</p>
         <p>100 cL 7.5€</p>
+        </div>
 
         <!-- Pastries -->
-        <h2>Viennoiseries</h2>
+        <button class="accordion">Viennoiseries</button>
+        <div class="panel">
         <!-- Normal -->
-        <h3>Croissant 4.5€</h3>
-        <h3>Pain au chocolat 4.5€</h3>
+        <h2>Croissant 4.5€</h2>
+        <h2>Pain au chocolat 4.5€</h2>
         <br><br>
         <!-- Mini -->
-        <h3>Mini croissant 3€</h3>
-        <h3>Mini pain au chocolat 3€</h3>
+        <h2>Mini croissant 3€</h2>
+        <h2>Mini pain au chocolat 3€</h2>
         <br><br>
         <!-- mix -->
-        <h3>Panier de mini viennoiseries assorties 10€</h3>
+        <h2>Panier de mini viennoiseries assorties 10€</h2>
+        </div>
 
         <!-- Bread and gourmandises -->
-        <h2>Pains et gourmandises</h2>
+        <button class="accordion">Pains et gourmandises</button>
+        <div class="panel">
         <!-- Ficelle -->
-        <h3>Ficelle grillée 6€</h3>
+        <h2>Ficelle grillée 6€</h2>
         <p>Beurre et confiture</p>
         <br><br>
         <!-- poilâne -->
-        <h3>Pain poilâne grillé 6€</h3>
+        <h2>Pain poilâne grillé 6€</h2>
         <p>Beurre et confiture</p>
         <br><br>
         <!-- Toast -->
-        <h3>Toast de pain de mie 5€</h3>
+        <h2>Toast de pain de mie 5€</h2>
         <p>Beurre et confiture</p>
+        </div>
       </div>
 
       <!-- Menu -->
       <div id="menu" class="tabcontent">
-        <h1>DEJEUNER</h1>
         <!-- Appetizer -->
-        <h2>Entrées</h2>
+        <button class="accordion">Entrées</button>
         <!-- Temporary -->
-        <h2>En ce moment</h2>
+        <button class="accordion">En ce moment</button>
         <!-- Fish -->
-        <h2>Poissons</h2>
+        <button class="accordion">Poissons</button>
         <!-- Meat -->
-        <h2>Viandes</h2>
+        <button class="accordion">Viandes</button>
         <!-- Trimming -->
-        <h2>Accompagnements</h2>
+        <button class="accordion">Accompagnements</button>
         <!-- Cheese and desserts -->
-        <h2>Fromage et desserts</h2>
+        <button class="accordion">Fromage et desserts</button>
       </div>
 
       <!-- Drinks -->
       <div id="drinks" class="tabcontent">
-        <h1>Boissons</h1>
       </div>
 
       <script>
