Carte petit dej + all carte
Manque les boissons

--- a/carte.html
+++ b/carte.html
@@ -183,16 +183,118 @@
       <div id="menu" class="tabcontent">
         <!-- Appetizer -->
         <button class="accordion">Entrées</button>
+        <div class="panel">
+          <h2>Oeufs bio mimosa aux truffes d'automne 18€</h2>
+          <br><br>
+          <h2>Coeur de laitue, huile d'olive & jus de citron 14€</h2>
+          <br><br>
+          <h2>Velouté de potimarron, émulsion coco-gingembre 14€</h2>
+          <br><br>
+          <h2>Burrata, pesto artichaut-noix 16€</h2>
+          <br><br>
+          <h2>Haricots verts, parmesan, noisettes, & champignons de paris 15€</h2>
+          <br><br>
+          <h2>Tarama petrossian, crackers de seigle 20€</h2>
+          <br><br>
+          <h2>Crispy tuna sushi 21€</h2>
+          <br><br>
+          <h2>Carpaccio de noix de saint-jacques, clémentine & poivre timut 24€</h2>
+          <br><br>
+          <h2>Tourteau, céleri rémoulade minute & oeufs de saumon 18€</h2>
+          <br><br>
+          <h2>Saumon fumé artisanal, quelques toasts & crème isigny 28€</h2>
+          <br><br>
+          <h2>Calamars croustillants, creamy spicy 19€</h2>
+          <br><br>
+          <h2>King crabe, pamplemousse rose & coeur de laitue 42€</h2>
+          <br><br>
+          <h2>Foie gras de canard maison 21€</h2>
+          <br><br>
+          <h2>Nems poulet maison yoom 20€</h2>
+          <br><br>
+          <h2>Caviar oscietre petrossian 30 grammes, blinis & creme isigny 120€</h2>
+          <br><br>
+        </div>
+
         <!-- Temporary -->
         <button class="accordion">En ce moment</button>
+        <div class="panel">
+          <h2>Vésuvio du Chef 23€</h2>
+          <video autoplay muted loop>
+            <source src="Videos/pizza.mp4" type=video/mp4>
+          </video>
+          <img src="Pictures/Team/Pizza_guy.jpeg" alt="Photo Eden Hazan">
+          <figcaption>Eden Hazan</figcaption>
+        </div>
+
         <!-- Fish -->
         <button class="accordion">Poissons</button>
+        <div class="panel">
+          <h2>Noix de saint-jacques plancha, barigoule crémeuse d’artichauts poivrade 42€</h2>
+          <br><br>
+          <h2>Thon snacké, shiitake, sésame & coriandre 36€</h2>
+          <br><br>
+          <h2>Cabillaud rôti aux morilles, légumes verts 36€</h2>
+          <br><br>
+          <h2>La sole sauvage 58€</h2>
+        </div>
+
         <!-- Meat -->
         <button class="accordion">Viandes</button>
+        <div class="panel">
+          <h2>Tartare de boeuf aubrac 24€</h2>
+          <br><br>
+          <h2>Le tigre qui pleure 35€</h2>
+          <br><br>
+          <h2>Chateau-filet béarnaise ou poivre 36€</h2>
+          <br><br>
+          <h2>La milanaise 34€</h2>
+          <br><br>
+          <h2>Pomme de ris de veau meunière, jus réduit au citron kalamansi 45€</h2>
+        </div>
+
         <!-- Trimming -->
         <button class="accordion">Accompagnements</button>
+        <div class="panel">
+          <h2>Pommes allumettes maison</h2>
+          <br><br>
+          <h2>Haricots verts frais</h2>
+          <br><br>
+          <h2>Pomme purée maison</h2>
+          <br><br>
+          <h2>Epinards minute</h2>
+          <br><br>
+          <h2>Penne tomate epicée</h2>
+          <br><br>
+          <h2>Coeur de sucrine</h2>
+          <br><br>
+          <h2>Basmati coco citronnelle</h2>
+          <br><br>
+          <p>Garniture supplementaire 6€</p>
+        </div>
+
         <!-- Cheese and desserts -->
         <button class="accordion">Fromage et desserts</button>
+        <div class="panel">
+          <h2>Chèvre fermier monsieur FABRE 14€</h2>
+          <br><br>
+          <h2>Pavlova glacée poire 16€</h2>
+          <br><br>
+          <h2>Tarte citron 16€</h2>
+          <br><br>
+          <h2>Dingue de l’ile flottante 12€</h2>
+          <br><br>
+          <h2>Tarte chocolat jivara-café 14€</h2>
+          <br><br>
+          <h2>Salade de fruits frais 16€</h2>
+          <br><br>
+          <h2>Des fruits rouges 19€</h2>
+          <br><br>
+          <h2>Coupe fruits rouges, glace yaourt & chantilly 20€</h2>
+          <br><br>
+          <h2>Glaces et sorbets C. PEDONE. 5€ le parfum</h2>
+          <p>Parfums: citron, fraise, cacao, poire, vanille, yaourt, caramel</p>
+        </div>
       </div>
 
       <!-- Drinks -->
