--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         </table>
       </div>
 
-        <!-- Équipe en cuisine -->
+        <!-- Team en cuisine -->
         <div id="equipe" class="equipe">
           <h2>La cuisine, plus qu'une passion</h2>
           <p>Nous transmettons notre savoir-faire culinaire de générations en générations.
@@ -111,19 +111,19 @@
         <!-- Slideshow des chefs -->
         <div class="slideshow" style="max-width:500px">
           <div class="slide animation">
-            <img src="Pictures/Équipe/gerard_menvussa.png" style="width:100%">
+            <img src="Pictures/Team/gerard_menvussa.png" style="width:100%">
             <p>Gérard MENVUSSA - Chef étoilé</p>  
           </div>
           <div class="slide animation">
-            <img src="Pictures/Équipe/sam_shoff.jpg" style="width:100%">
+            <img src="Pictures/Team/sam_shoff.jpg" style="width:100%">
             <p>Sam SHOFF - Chef pâtissier</p>
           </div>
           <div class="slide animation">
-            <img src="Pictures/Équipe/aubin_sahalor.png" style="width:100%">
+            <img src="Pictures/Team/aubin_sahalor.png" style="width:100%">
             <p>Aubin SAHALOR - Chef saucier</p>  
           </div>
           <div class="slide animation">
-            <img src="Pictures/Équipe/ademar_okardetour.jpg" style="width:100%">
+            <img src="Pictures/Team/ademar_okardetour.jpg" style="width:100%">
             <p>Idemar OKARDETOUR - Chef rôtissier</p>
           </div>
         </div>
