Update drinks menu

--- a/carte.html
+++ b/carte.html
@@ -112,8 +112,8 @@
           <p>Ceylan</p>
           <p>Darjeeling</p>
           <p>Marco polo</p>
-          <p>Thé vert Fuji Yama</h2>
-          <p>Thé vert jasmin</h2>
+          <p>Thé vert Fuji Yama</p>
+          <p>Thé vert jasmin</p>
           <br><br>
           <!-- French tea -->
           <h2>French breakfast tea 8€</h2>
@@ -292,13 +292,187 @@
           <br><br>
           <h2>Coupe fruits rouges, glace yaourt & chantilly 20€</h2>
           <br><br>
-          <h2>Glaces et sorbets C. PEDONE. 5€ le parfum</h2>
+          <h2>Glaces et sorbets C. PEDONE. 5€ (la boule)</h2>
           <p>Parfums: citron, fraise, cacao, poire, vanille, yaourt, caramel</p>
         </div>
       </div>
 
       <!-- Drinks -->
       <div id="drinks" class="tabcontent">
+        <!-- Soft -->
+        <button class="accordion">Softs</button>
+        <div class="panel">
+          <h2>Jus de carottes bio et gingembre 9€</h2>
+          <br><br>
+          <h2>healthy green detox 9€</h2>
+          <p>granny, concombre, celeri, basilic</p>
+          <br><br>
+          <h2>vittel, San Pellegrino, Perrier</h2>
+          <p>50cL 6.5€</p>
+          <p>100cL 7.5€</p>
+          <br><br>
+          <h2>perrier, coca-cola, coca-cola light, coca-cola zero</h2>
+          <p>33cL 6.5€</p>
+          <br><br>
+          <h2>Elderflower Tonic / Ginger Ale / Indian Tonic</h2>
+          <p>20cl 9€</p>
+          <br><br>
+          <h2>Red bull</h2>
+          <p>20cL 9€</p>
+          <br><br>
+          <h2>Pur jus de fruits / nectar de fruits Charles PAPILLON 9€</h2>
+          <p>Pomme, tomate 25cL</p>
+          <p>Framboise, pêche de vigne, abricot, poire williams 25cl</p>
+          <br><br>
+          <h2>Fruits frais 7€</h2>
+          <p>Orange</p>
+          <p>Pamplemousse</p>
+          <p>Citron</p>
+          <br><br>
+          <h2>thé glacé / café frappé 7€</h2>
+        </div>
+
+        <!-- Alcohol -->
+        <button class="accordion">Alcools</button>
+        <div class="panel">
+          <P>L’abus d’alcool est dangereux pour la santé, à consommer avec modération</P>
+          <!-- Wines and champagne-->
+          <button class="accordion">Vins et champagnes</button>
+          <!-- White Wine -->
+          <button class="accordion">Les vins blancs</button>
+          <!-- Corse -->
+          <button class="accordion">Corse</button>
+          <h2>Clos venturi</h2>
+          <h2>Domaine Vico 20</h2>
+          <p>75 cL | 69€</p>
+          <!-- Bordeaux -->
+          <button class="accordion">Bordeaux</button>
+          <h2>Château Petit-Guiraud</h2>
+          <h2>Sauternes AOC  19 </h2>
+          <p>75 cL | 65€</p>
+          <!-- Languedoc -->
+          <button class="accordion">Languedoc</button>
+          <h2>Domaine d’Aigues Belles</h2>
+          <h2>Le premier Rolle – Gilles Palatan 18</h2>
+          <p>75 cL | 50€</p>
+          <!-- Côtes de provence -->
+          <button class="accordion">Côtes de provence</button>
+          <h2>Château Minuty – Blanc et or 20</h2>
+          <p>75 cL | 59€</p>
+          <!-- Rhône -->
+          <button class="accordion">Rhône</button>
+          <h2>Châteauneuf-du-Pape</h2>
+          <h2>Château la Nerthe 19</h2>
+          <p>75 cL | 95€</p>
+          <br><br>
+          <h2>Condrieu – Clos Boucher</h2>
+          <h2>Delas 19</h2>
+          <p>75 cL | 98€</p>
+          <!-- Loire -->
+          <button class="accordion">Loire</button>
+          <h2>Vinifera Sauvignon AOC – Issu de vignes uniques non greffées H. Marionnet 17</h2>
+          <p>75 cL | 45€</p>
+          <br><br>
+          <h2>Sancerre – Pascal Jolivet 20</h2>
+          <p>25 cL | 30€</p>
+          <p>75 cL | 52€</p>
+          <br><br>
+          <h2>Pouilly fumé – Pascal Jolivet 20</h2>
+          <p>75 cL | 55€</p>
+          <!-- Bourgogne -->
+          <button class="accordion">Bourgogne</button>
+          <h2>Chablis – Le Finage</h2>
+          <h2>La Chablisienne 17</h2>
+          <p>25 cL | 29€</p>
+          <p>75 cL | 49€</p>
+          <br><br>
+          <h2>Vézelay AOC</h2>
+          <h2>Couvent des Saint Pères 18</h2>
+          <p>75 cL | 52€</p>
+          <br><br>
+          <h2>Hautes Côtes de Beaune</h2>
+          <h2>Les Champlains</h2>
+          <h2>Domaine Decelle et Villa 17</h2>
+          <p>75 cL | 64€</p>
+          <br><br>
+          <h2>Pouilly-Fuissé</h2>
+          <h2>Domaine du Roc des Boutires 19</h2>
+          <p>75 cL | 66€</p>
+          <br><br>
+          <h2>Savigny-lès-Beaune – 1er Cru Monopole Doudet Naudin 17</h2>
+          <p>75 cL | 85€</p>
+          <br><br>
+          <h2>Château de Chassagne-Montrachet Domaine Bader Mimeur 08</h2>
+          <p>75 cL | 95€</p>
+          <br><br>
+          <h2>Meursault – Le Limozin Château de Meursault 18</h2>
+          <p>75 cL | 115€</p>
+          <br><br>
+          <h2>Corton-Charlemagne Grand Cru Domaine Champy 17</h2>
+          <p>75 cL | 195€</p>
+
+          <!-- Jura -->
+          <button class="accordion">Jura</button>
+          <!-- Vin de France -->
+          <button class="accordion">Vin de France</button>
+          <!-- Vin d'Ile de France -->
+          <button class="accordion">Vin d'Ile de France</button>
+
+          <!-- Rosé Wine -->
+          <button class="accordion">Les vins rosés</button>
+
+          <!-- Red Wine -->
+          <button class="accordion">Les vins rouges</button>
+
+          <!-- Champagne -->
+          <button class="accordion">Champagnes</button>
+
+
+          <!-- Beer -->
+          <button class="accordion">Bières</button>
+
+
+          <!-- Classic -->
+          <button class="accordion">Nos classiques</button>
+
+
+          <!-- Mocktails -->
+          <button class="accordion">Nos mocktails</button>
+
+
+          <!-- Highballs -->
+          <button class="accordion">Nos highballs</button>
+
+
+          <!-- Alcohol -->
+          <button class="accordion">Nos alcools</button>
+        </div>
+
+        <!-- Hot drink -->
+        <button class="accordion">Boissons chaudes</button>
+        <div class="panel">
+          <button class="accordion">Boissons</button>
+          <h2>Café expresso 3.9€</h2>
+          <h2>Infusions 6€</h2>
+          <h2>Chocolat chaud maison 8€</h2>
+          <button class="accordion">Thés "MARIAGE FRERES" 8€</button>
+          <h2>Earl grey</h2>
+          <h2>Ceylan</h2>
+          <h2>Darjeeling</h2>
+          <h2>Marco polo</h2>
+          <h2>Thé vert Fuji Yama</h2>
+          <h2>Thé vert jasmin</h2>
+        </div>
+
+        <!-- Milk-shakes -->
+        <button class="accordion">Milk-shakes</button>
+        <div class="panel">
+          <h2>Vanille</h2>
+          <h2>Fraise</h2>
+          <h2>Oréo cookie</h2>
+          <h2>Chocolat</h2>
+          <p>12€</p>
+        </div>
       </div>
 
       <script>
