--- a/carte.html
+++ b/carte.html
@@ -374,7 +374,7 @@
           <p>75 cL | 45€</p>
           <br><br>
           <h2>Sancerre – Pascal Jolivet 20</h2>
-          <p>25 cL | 30€</p>
+          <p>37.5 cL | 30€</p>
           <p>75 cL | 52€</p>
           <br><br>
           <h2>Pouilly fumé – Pascal Jolivet 20</h2>
@@ -383,7 +383,7 @@
           <button class="accordion">Bourgogne</button>
           <h2>Chablis – Le Finage</h2>
           <h2>La Chablisienne 17</h2>
-          <p>25 cL | 29€</p>
+          <p>37.5 cL | 29€</p>
           <p>75 cL | 49€</p>
           <br><br>
           <h2>Vézelay AOC</h2>
@@ -410,16 +410,40 @@
           <br><br>
           <h2>Corton-Charlemagne Grand Cru Domaine Champy 17</h2>
           <p>75 cL | 195€</p>
-
           <!-- Jura -->
           <button class="accordion">Jura</button>
+          <h2>Chardonnay – Arbois</h2>
+          <h2>Domaine rolet 15</h2>
+          <p>75 cL | 49€</p>
           <!-- Vin de France -->
           <button class="accordion">Vin de France</button>
+          <h2>Viognier – Vermentino bio – la Winerie Adrien Pélissié 20</h2>
+          <p>75 cL | 42€</p>
           <!-- Vin d'Ile de France -->
           <button class="accordion">Vin d'Ile de France</button>
+          <h2>Chenin – Le Grand Lever Domaine – La Bouche du Roi A. Pelissié & J. Brustis 20</h2>
+          <p>75 cL | 52€</p>
 
           <!-- Rosé Wine -->
           <button class="accordion">Les vins rosés</button>
+          <!-- Vin de France -->
+          <button class="accordion">Vin de France</button>
+          <h2>Rosé bio – la Winerie Adrien Pélissié 20</h2>
+          <p>75 cL | 35€</p>
+          <br><br>
+          <h2>Alône – Provence P. Jourdan & C. Ott 20</h2>
+          <p>75 cL | 52€</p>
+          <!-- Côtes de provence -->
+          <button class="accordion">Côtes de provence</button>
+          <h2>Domaine de l’Île « Bio » 20 Porquerolles, Maison CHANEL</h2>
+          <p>75 cL | 49€</p>
+          <br><br>
+          <h2>Château Minuty Rosé et Or 20</h2>
+          <p>75 cL | 59€</p>
+          <p>150 cL | 110€</p>
+          <br><br>
+          <h2>Château Minuty Cuvée 281 – A.O.C  20</h2>
+          <p>75 cL | 90€</p>
 
           <!-- Red Wine -->
           <button class="accordion">Les vins rouges</button>
