Début vin rouge

--- a/carte.html
+++ b/carte.html
@@ -447,6 +447,10 @@
 
           <!-- Red Wine -->
           <button class="accordion">Les vins rouges</button>
+          <!-- Vin de France -->
+          <button class="accordion">Vin de France</button>
+          <h2>Le Jugement de Paris – la Winerie Adrien Pelissié 16</h2>
+          <p>75 cL | 88€</p>
 
           <!-- Champagne -->
           <button class="accordion">Champagnes</button>
