Red wine + champagne + white wine name

--- a/carte.html
+++ b/carte.html
@@ -342,18 +342,15 @@
           <button class="accordion">Les vins blancs</button>
           <!-- Corse -->
           <button class="accordion">Corse</button>
-          <h2>Clos venturi</h2>
-          <h2>Domaine Vico 20</h2>
+          <h2>Clos venturi Domaine Vico 20</h2>
           <p>75 cL | 69€</p>
           <!-- Bordeaux -->
           <button class="accordion">Bordeaux</button>
-          <h2>Château Petit-Guiraud</h2>
-          <h2>Sauternes AOC  19 </h2>
+          <h2>Château Petit-Guiraud Sauternes AOC 19</h2>
           <p>75 cL | 65€</p>
           <!-- Languedoc -->
           <button class="accordion">Languedoc</button>
-          <h2>Domaine d’Aigues Belles</h2>
-          <h2>Le premier Rolle – Gilles Palatan 18</h2>
+          <h2>Domaine d’Aigues Belles Le premier Rolle – Gilles Palatan 18</h2>
           <p>75 cL | 50€</p>
           <!-- Côtes de provence -->
           <button class="accordion">Côtes de provence</button>
@@ -361,12 +358,10 @@
           <p>75 cL | 59€</p>
           <!-- Rhône -->
           <button class="accordion">Rhône</button>
-          <h2>Châteauneuf-du-Pape</h2>
-          <h2>Château la Nerthe 19</h2>
+          <h2>Châteauneuf-du-Pape Château la Nerthe 19</h2>
           <p>75 cL | 95€</p>
           <br><br>
-          <h2>Condrieu – Clos Boucher</h2>
-          <h2>Delas 19</h2>
+          <h2>Condrieu – Clos Boucher Delas 19</h2>
           <p>75 cL | 98€</p>
           <!-- Loire -->
           <button class="accordion">Loire</button>
@@ -381,22 +376,17 @@
           <p>75 cL | 55€</p>
           <!-- Bourgogne -->
           <button class="accordion">Bourgogne</button>
-          <h2>Chablis – Le Finage</h2>
-          <h2>La Chablisienne 17</h2>
+          <h2>Chablis – Le Finage La Chablisienne 17</h2>
           <p>37.5 cL | 29€</p>
           <p>75 cL | 49€</p>
           <br><br>
-          <h2>Vézelay AOC</h2>
-          <h2>Couvent des Saint Pères 18</h2>
+          <h2>Vézelay AOC Couvent des Saint Pères 18</h2>
           <p>75 cL | 52€</p>
           <br><br>
-          <h2>Hautes Côtes de Beaune</h2>
-          <h2>Les Champlains</h2>
-          <h2>Domaine Decelle et Villa 17</h2>
+          <h2>Hautes Côtes de Beaune Les Champlains Domaine Decelle et Villa 17</h2>
           <p>75 cL | 64€</p>
           <br><br>
-          <h2>Pouilly-Fuissé</h2>
-          <h2>Domaine du Roc des Boutires 19</h2>
+          <h2>Pouilly-Fuissé Domaine du Roc des Boutires 19</h2>
           <p>75 cL | 66€</p>
           <br><br>
           <h2>Savigny-lès-Beaune – 1er Cru Monopole Doudet Naudin 17</h2>
@@ -412,8 +402,7 @@
           <p>75 cL | 195€</p>
           <!-- Jura -->
           <button class="accordion">Jura</button>
-          <h2>Chardonnay – Arbois</h2>
-          <h2>Domaine rolet 15</h2>
+          <h2>Chardonnay – Arbois Domaine rolet 15</h2>
           <p>75 cL | 49€</p>
           <!-- Vin de France -->
           <button class="accordion">Vin de France</button>
@@ -451,10 +440,180 @@
           <button class="accordion">Vin de France</button>
           <h2>Le Jugement de Paris – la Winerie Adrien Pelissié 16</h2>
           <p>75 cL | 88€</p>
+          <!-- Vin d'Ile de France -->
+          <button class="accordion">Vin d'Ile de France</button>
+          <h2>Cabernet Franc – Coquilles rouges Domaine – La Bouche du Roi A. Pelissié & J. Brustis 20</h2>
+          <p>75 cL | 45€</p>
+          <!-- Corse -->
+          <button class="accordion">Corse</button>
+          <h2>Clos Canarelli bio – Figari 19</h2>
+          <p>75 cL | 70€</p>
+          <!-- Provence -->
+          <button class="accordion">Provence</button>
+          <h2>Bandol AOC Domaine de Terrebrune 16</h2>
+          <p>75 cL | 70€</p>
+          <!-- Rhône -->
+          <button class="accordion">Rhône</button>
+          <h2>Côtes du Rhône – les Becs Fins Laurent Tardieu 19</h2>
+          <p>75 cL | 39€</p>
+          <br><br>
+          <h2>Crozes-Hermitage – Les Launes Delas 20</h2>
+          <p>75 cL | 49€</p>
+          <br><br>
+          <h2>Saint-Joseph – Coteaux Laurent Tardieu 17</h2>
+          <p>75 cL | 75€</p>
+          <br><br>
+          <h2>Cornas – Domaine du Tunnel Stéphane Robert 18</h2>
+          <p>75 cL | 89€</p>
+          <br><br>
+          <h2>Châteauneuf-du-Pape Château la Nerthe 16</h2>
+          <p>75 cL | 95€</p>
+          <br><br>
+          <h2>Hermitage – Delas Domaine des Tourettes 16</h2>
+          <p>75 cL | 98€</p>
+          <br><br>
+          <h2>Côte-Rôtie – Seigneur de Maugiron Delas 19</h2>
+          <p>75 cL | 105€</p>
+          <br><br>
+          <h2>Côte-Rôtie – La Mouline E- Guigal 11</h2>
+          <p>75 cL | 390€</p>
+          <!-- Languedoc -->
+          <button class="accordion">Languedoc</button>
+          <h2>Corbières – Domaine la Forge Gérard Bertrand 19</h2>
+          <p>75 cL | 89€</p>
+          <!-- Loire -->
+          <button class="accordion">Loire</button>
+          <h2>Sancerre – les Bonnes Bouches H. Bourgeois 16/18</h2>
+          <p>37.5 cL | 35€</p>
+          <p>75 cL | 55€</p>
+          <br><br>
+          <h2>Touraine Renaissance Vin nature – vignes non greffées Marionnet 19</h2>
+          <p>75 cL | 45€</p>
+          <!-- Bourgogne -->
+          <button class="accordion">Bourgogne</button>
+          <h2>Bourgogne – Vieilles vignes Retour des Flandres – Régnard 17</h2>
+          <p>75 cL | 55€</p>
+          <br><br>
+          <h2>Chorey-lès-beaune – Les Poiriers Domaine Decelle et Villa 18</h2>
+          <p>75 cL | 72€</p>
+          <br><br>
+          <h2>Pernand Vergelesses 1er Cru Les Vergelesses – D. Guyon 18</h2>
+          <p>75 cL | 85€</p>
+          <br><br>
+          <h2>Morey-Saint-Denis 1er Cru Clos des Ormes – Georges Lignier 18</h2>
+          <p>75 cL | 92€</p>
+          <br><br>
+          <h2>Chambolle-Musigny Les Beaux Bruns – Domaine Rion 18</h2>
+          <p>75 cL | 115€</p>
+          <br><br>
+          <h2>Volnay 1er cru – Clos des Chênes Domaine Antonin Guyon 18</h2>
+          <p>75 cL | 125€</p>
+          <br><br>
+          <h2>Nuits-Saint-Georges 1er cru Aux Perdrix B & C. Devillard 13</h2>
+          <p>75 cL | 130€</p>
+          <br><br>
+          <h2>Charmes-Chambertin Grand cru Domaine Huguenot 17</h2>
+          <p>75 cL | 175€</p>
+          <br><br>
+          <h2>Clos Vougeot AOC Grand Cru le Petit Maupertuis Domaine Daniel Rion 12</h2>
+          <p>75 cL | 190€</p>
+          <!-- Beaujolais -->
+          <button class="accordion">Beaujolais</button>
+          <h2>Moulin à vent Couvent des Thorins 19</h2>
+          <p>75 cL | 46€</p>
+          <br><br>
+          <h2>Morgon – Corcelettes Domaine L. Claude Desvignes 20</h2>
+          <p>75 cL | 48€</p>
+          <!-- Bordeaux -->
+          <button class="accordion">Bordeaux</button>
+          <h2>Saint-Estèphe 2017 La Devise de Lilian</h2>
+          <p>75 cL | 46€</p>
+          <br><br>
+          <h2>Château de Landiras Jeanne de Lestonnac – Graves 16</h2>
+          <p>75 cL | 48€</p>
+          <br><br>
+          <h2>Moulin de La Lagune Haut-Médoc 14</h2>
+          <p>75 cL | 66€</p>
+          <br><br>
+          <h2>Château Maucaillou Moulis 16</h2>
+          <p>75 cL | 77€</p>
+          <br><br>
+          <h2>Château Lalande-Borie Saint-Julien 14</h2>
+          <p>75 cL | 85€</p>
+          <br><br>
+          <h2>Château Latour-Martillac Pessac-Léognan 14</h2>
+          <p>75 cL | 89€</p>
+          <br><br>
+          <h2>Château Pedesclaux Pauillac 14</h2>
+          <p>75 cL | 98€</p>
+          <br><br>
+          <h2>Château d’Issan – Margaux 3eme Grand cru classé 14</h2>
+          <p>75 cL | 110€</p>
+          <br><br>
+          <h2>Château Dassault – Saint-Emilion Grand Cru classé 16</h2>
+          <p>75 cL | 115€</p>
+          <br><br>
+          <h2>Château Clinet – Pomerol 14</h2>
+          <p>75 cL | 160€</p>
+          <br><br>
+          <h2>Château Canon – Saint-Emilion 1er Grand Cru classé 11</h2>
+          <p>75 cL | 220€</p>
+          <br><br>
+          <h2>Château Léoville Barton Saint-Julien – Grand cru classé 09</h2>
+          <p>75 cL | 260€</p>
+          <br><br>
+          <h2>Château Figeac – Saint-Emilion 1er Grand Cru classé 09</h2>
+          <p>75 cL | 290€</p>
 
           <!-- Champagne -->
           <button class="accordion">Champagnes</button>
-
+          <h2>Rœderer brut premier</h2>
+          <p>75 cL | 98€</p>
+          <br><br>
+          <h2>R de Ruinart</h2>
+          <p>75 cL | 90€</p>
+          <br><br>
+          <h2>Roederer Rosé millésimé 2013</h2>
+          <p>75 cL | 95€</p>
+          <br><br>
+          <h2>Roederer Brut millésimé 2012</h2>
+          <p>75 cL | 95€</p>
+          <br><br>
+          <h2>Roederer Blanc de Blancs 2014</h2>
+          <p>75 cL | 95€</p>
+          <br><br>
+          <h2>Bollinger spécial cuvée</h2>
+          <p>75 cL | 115€</p>
+          <br><br>
+          <h2>Veuve Clicquot</h2>
+          <p>75 cL | 105€</p>
+          <br><br>
+          <h2>Moet & Chandon Grand Vintage 2012</h2>
+          <p>75 cL | 120€</p>
+          <br><br>
+          <h2>Billecart-Salmon rosé</h2>
+          <p>75 cL | 120€</p>
+          <br><br>
+          <h2>Palmes d’or brut vintage 2006 Nicolas Feuillatte</h2>
+          <p>75 cL | 130€</p>
+          <br><br>
+          <h2>Cuvée Louise 2004 Pommery</h2>
+          <p>75 cL | 180€</p>
+          <br><br>
+          <h2>Blanc des Millénaires 2006 Charles Heidsieck</h2>
+          <p>75 cL | 240€</p>
+          <br><br>
+          <h2>Collection Crayères bouteille Charles Heidsieck (300 cl)</h2>
+          <p>300 cL | 290€</p>
+          <br><br>
+          <h2>Collection Crayères jeroboam 1989</h2>
+          <p>75 cL | 800€</p>
+          <h2>Dom Pérignon – Vintage – 2012</h2>
+          <p>75 cL | 220€</p>
+          <h2>Dom Ruinart 2009</h2>
+          <p>75 cL | 240€</p>
+          <h2>Cristal Roederer 2013</h2>
+          <p>75 cL | 260€</p>
 
           <!-- Beer -->
           <button class="accordion">Bières</button>
