Mocktails, classics + beers

--- a/carte.html
+++ b/carte.html
@@ -617,14 +617,61 @@
 
           <!-- Beer -->
           <button class="accordion">Bières</button>
+          <!-- Pression -->
+          <button class="accordion">Pression</button>
+          <h2>Carlsberg</h2>
+          <p>25 cL | 8€</p>
+          <p>50 cL | 14€</p>
+          <br><br>
+          <h2>1664</h2>
+          <p>25 cL | 8€</p>
+          <p>50 cL | 14€</p>
+          <!-- Bottles -->
+          <button class="accordion">Bouteilles</button>
+          <h2>Carlsberg</h2>
+          <p>33 cL | 10€</p>
+          <br><br>
+          <h2>1664 blanche</h2>
+          <p>33 cL | 10€</p>
+          <br><br>
+          <h2>Corona</h2>
+          <p>35.5 cL | 10€</p>
+          <br><br>
+          <h2>Duvel</h2>
+          <p>33 cL | 12€</p>
 
 
           <!-- Classic -->
           <button class="accordion">Nos classiques</button>
+          <h2>83 Auteuil</h2>
+          <p>Piscine de sauterne & champagne roederer 16€</p>
+          <br><br>
+          <h2>Margarita</h2>
+          <p>Sauza blanco, jus citron vert, triple sec 13€</p>
+          <br><br>
+          <h2>Cosmopolitan</h2>
+          <p>Skyy, jus citron vert, jus cranberry, triple sec 13€</p>
+          <br><br>
+          <h2>Porn star martini</h2>
+          <p>Skyy, fruit de la passion, sirop vanille, jus citron vert, shot de prosecco 15€</p>
+          <br><br>
+          <h2>Mojito (option mango ou raspberry)</h2>
+          <p>Rhum blanc trois rivieres, jus citron vert, menthe fraiche, sucre et eau gazeuse 13€</p>
+          <br><br>
+          <h2>Caïpirinha</h2>
+          <p>Leblon, citron vert et sucre roux 13€</p>
 
 
           <!-- Mocktails -->
           <button class="accordion">Nos mocktails</button>
+          <h2>Apple and mint smash</h2>
+          <p>Mojito arrosé de jus de pomme 10€</p>
+          <br><br>
+          <h2>Cloudy house lemonade</h2>
+          <p>Mélange d'agrumes, de citron du Mexique, arrosé de limonade 10€</p>
+          <br><br>
+          <h2>Virgin colada</h2>
+          <p>Piña colada sans le rhum 10€</p>
 
 
           <!-- Highballs -->
