--- a/carte.html
+++ b/carte.html
@@ -676,6 +676,29 @@
 
           <!-- Highballs -->
           <button class="accordion">Nos highballs</button>
+          <h2>Moscow mule ou Carribean mule</h2>
+          <p>Rhum trois rivieres ambre, jus citron vert, fentiman’s ginger beer 13€</p>
+          <br><br>
+          <h2>Caïpirovska</h2>
+          <p>Vodka noire à la mûre, citron vert, sucre roux 13€</p>
+          <br><br>
+          <h2>Campari negroni</h2>
+          <p>Campari, vermouth, gin bulldog 13€</p>
+          <br><br>
+          <h2>Whisky sour</h2>
+          <p>Knob creek, blanc d’oeuf, citron, angostura, sucre de canne 13€</p>
+          <br><br>
+          <h2>Aperol spritz</h2>
+          <p>Aperol, prosecco, eau gazeuze 13€</p>
+          <br><br>
+          <h2>Ti-punch la perle</h2>
+          <p>Rhum à 1710 la perle, citron vert, sucre roux 13€</p>
+          <br><br>
+          <h2>Southside</h2>
+          <p>Bulldog, menthe, citron vert, sucre de canne 11€</p>
+          <br><br>
+          <h2>G&T</h2>
+          <p>Bulldog, fentiman's tonic 13€</p>
 
 
           <!-- Alcohol -->
