--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
             <span></span>
 
             <ul id="menu">
-              <a href="#"><li>Home</li></a>
-              <a href="#"><li>About</li></a>
-              <a href="#"><li>Info</li></a>
-              <a href="#"><li>Contact</li></a>
+              <a href="index.html"><li>Accueil</li></a>
+              <a href="carte.html"><li>Carte</li></a>
+              <a href="reservation.html"><li>Reservation</li></a>
+            
             </ul>
           </div>
         </div>
