--- a/index.html
+++ b/index.html
@@ -14,36 +14,10 @@
     
     <!-- <div id="bloc1"> -->
       <header>
-        <div class="banner">
-          <div class="logos">
-            <img src="Pictures/Logos/Vache3.svg" alt="Logo vache">
-            <img src="Pictures/Logos/Murat.svg" alt="Logo Murat">
-          </div>
-        </div>
+        <img src="Pictures/Logos/Vache3.svg" alt="Logo vache">
+        <img src="Pictures/Logos/Murat.svg" alt="Logo Murat">
       </header>
     <!-- </div> -->
-
-    <!-- MENU HAMBURGER -->
-
-      <!-- <div id="bloc2"> -->
-        <div id="hamburger">
-          <div id="menuToggle">
-            <input type="checkbox" />
-
-            <span></span>
-            <span></span>
-            <span></span>
-
-            <ul id="menu">
-              <a href="#"><li>Home</li></a>
-              <a href="#"><li>About</li></a>
-              <a href="#"><li>Info</li></a>
-              <a href="#"><li>Contact</li></a>
-            </ul>
-          </div>
-        </div>
-      <!-- </div> -->
-  
 
     <nav>
       <ul>
@@ -59,6 +33,27 @@
       </ul>
     </nav>
 
+
+    <!-- MENU HAMBURGER -->
+
+      <!-- <div id="bloc2"> -->
+        <div id="hamburger">
+          <div id="menuToggle">
+            <input type="checkbox" />
+
+            <span></span>
+            <span></span>
+            <span></span>
+
+            <ul id="menu">
+              <a href="index.html"><li>Accueil</li></a>
+              <a href="carte.html"><li>Carte</li></a>
+              <a href="reservation.html"><li>Réservation</li></a>
+            </ul>
+          </div>
+        </div>
+      <!-- </div> -->
+  
     <main>
       <div class="bienvenue">
         <h1>Bienvenue au restaurant Le Murat</h1>
